2003-01-21  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	Better manpage installation.

=== librsvg 2.2.0 ===
	
2003-01-20  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Update to 2.2.0

2003-01-16  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.1: Improve manual page

	* test-rsvg.c: Support .jpg as well as .jpeg as JPEG format specifier
	
2003-01-14  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-XXX.c (*): Rework css_parse_normalized_length to "properly" 
	handle "ex" units (i.e. handle them how ImageMagick handles them)
	
2003-01-14  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c (rsvg_parse_style_attrs): Also honor the "*" style
	
2003-01-13  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.1 : New man page, gets installed
	* configure.in : Post release version number bump -> 2.1.6
	
2003-01-13  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-shapes.c (start_rect): Handle rounded rects missing "ry" param 
	properly
	
2003-01-13  Dom Lachowicz <cinamod@hotmail.com>

	* *: Rework previous commit to use g_ascii_dtostr and g_ascii_strtod
	
2003-01-13  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-private.h: Add setlocale wrapper fns. Problem found by George 
	Lebl (jirka@5z.com), work based on/inspired by a patch by him.
	* rsvg.c: Use above fns
	* rsvg-css.c: Ditto
	* rsvg-text.c: Ditto
	* rsvg-shapes.c: Ditto
	
=== librsvg 2.1.5 ===
	
2003-01-13  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	Added rsvg-private.h

	* NEWS: 
	* configure.in:
	2.1.5

=== librsvg 2.1.4 ===
	
2003-01-13  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Update to 2.1.4

2003-01-08 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c: Handle display and visibility styles to some extent
	* rsvg-text.c: Use above
	* rsvg-shapes.c: Ditto
	
2003-01-08 Dom Lachowicz <cinamod@hotmail.com>
